# klang

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  flag  host-setup.sh
compiler/: CMakeLists.txt  Logging.cpp  Main.cpp  Util.cpp
compiler/Codegen/: Codegen.cpp  InstSched.cpp  RegAlloc.cpp
compiler/IR/: Analysis.cpp  IR.cpp  Interpreter.cpp  Optimize.cpp
compiler/Semantic/: AST.cpp  IRGen.cpp  Parser.yy  Scanner.ll
deploy/: api.py  capture.sh  klang  run.sh  server.py
exploit/: exp.klang  x.py
include/: Logging.h  Util.h
include/Codegen/: Codegen.h  InstSched.h  RegAlloc.h
include/IR/: Analysis.h  IR.h  Interpreter.h  Optimize.h
include/Semantic/: AST.h  IRGen.h  Scanner.h
runtime/: api.c  main.c  wrapper.S
scripts/: compile.sh  pow_solver.py
tests/: a.klang  exp.klang
